Updated the game-board tile structure to the client required ones

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ flutter:
     - assets/audio/
     - assets/images/
     - assets/icons/
+    - assets/tile-icons/
 
 # Configuration for the flutter_launcher_icons package
 flutter_launcher_icons:
