--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   firebase_core: ^4.2.1
   cloud_firestore: ^6.1.0
   shared_preferences: ^2.5.3
+  vector_math: ^2.2.0
 
 dev_dependencies:
   flutter_test:
