--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   shared_preferences: ^2.5.3
   vector_math: ^2.2.0
   device_info_plus: ^12.3.0
+  firebase_auth: ^6.1.3
+  logger: ^2.6.2
 
 dev_dependencies:
   flutter_test:
